--- a/_layouts/person.html
+++ b/_layouts/person.html
@@ -300,6 +300,10 @@ layout: default
         {% include students.html students=page.phd_rotation_students %}
         {% endif %}
 
+       <h3>Graduated PhD Students</h3>
+
+      {% include students.html students=page.phd_graduates %}
+
         {% if page.ms_students %}
         <h3>Current MS Students</h3>
 
