--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -51,12 +51,11 @@
 
     {% for post in site.posts limit:4 %}
       <div class="post-list-item">
-     
-
-        <a class="post-list-link" href="{{ site.baseurl }}{{ post.url }}"><div class="post-list-title">
-          {% if post.type == "blog" %}Blog Post:{% else %}News:{% endif %} {{ post.title }}
-          <span class="right-text">{{ post.date | date: "%-d %b %Y" }}</span>  
-          </a>
+        <div class="post-list-title">
+        <a class="post-list-link" href="{{ site.baseurl }}{{ post.url }}">
+          <span>{% if post.type == "blog" %}Blog Post:{% else %}News:{% endif %} {{ post.title }}</span>
+           <span class="right-text">{{ post.date | date: "%-d %b %Y" }}</span>  
+          </a>          
       </div>
       <div class="post-list-excerpt">
 		  {{ post.content | truncatewords: 160 }}
