--- a/_includes/head_default.html
+++ b/_includes/head_default.html
@@ -14,23 +14,31 @@
 <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/favicon.ico" />
 <link rel="apple-touch-icon" href="{{ site.baseurl }}/favicon.png" />
 
-{% if page.layout == "publication" %} <!-- metadata for link preview  -->
+{% if page.layout == "post" %} 
+<meta name="twitter:image:src" content="{{ site.url }}{{page.lead-image}}"> 
+<meta property="og:image" content="{{ site.url }}{{ page.lead-image }}"> 
+{% endif %}
+
+{% if page.layout == "publication" %}
+  {% if page.image_large %}
+  <meta name="twitter:image:src" content="{{ site.url }}/assets/images/publications/{{page.image_large}}"> 
+  <meta property="og:image" content="{{ site.url }}/assets/images/publications/{{page.image_large}}" />
+  {% endif %}
+{% endif %}
+
+
+{% if page.layout == "publication" or page.layout == "post" %} <!-- metadata for link preview  -->
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@visdesignlab">
   <meta name="twitter:title" content="{{page.title}}">
   <meta name="twitter:description" content="{{ page.abstract | strip_html }}">
   <meta name="twitter:creator" content="@visdesignlab">
-  {% if page.image_large %}
-  <meta name="twitter:image:src" content="{{ site.url }}/assets/images/publications/{{page.image_large}}">
-  {% endif %}
+ 
 
   <!-- Open Graph data -->
   <meta property="og:title" content="{{page.title}}" />
   <meta property="og:type" content="article" />
   <meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.url }}" />
-  <meta property="og:description" content="{{ page.abstract | strip_html }}" />
-  {% if page.image_large %}
-  <meta property="og:image" content="{{ site.url }}/assets/images/publications/{{page.image_large}}" />
-  {% endif %}
 {% endif %}
+
