--- a/_sass/team.scss
+++ b/_sass/team.scss
@@ -166,3 +166,11 @@
     margin-bottom: 75px;
   }
 }
+
+.person-image-blog {
+  @extend .person-image;
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+  border-width: thin;
+}
