--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
   </div>
   <div class="navigation-buttons">
     <ul>
-      {% assign navButtons = "home|team|publications|culture|positions" | split: "|" %}
+      {% assign navButtons = "home|team|publications|blog|culture|positions" | split: "|" %}
       {% for nav in navButtons %}
       {% assign navURL = nav %}
       {% assign pageURL = page.url %}
