--- a/css/site.scss
+++ b/css/site.scss
@@ -26,7 +26,7 @@ $large-display: new-breakpoint(min-width 1200px $large-display-columns);
   float: left;
   text-align: left;
   margin-right: 30px;
-  width: 110px;
+  width: 80px;
 
   &:last-child {
     margin-right: 0px;
@@ -267,25 +267,29 @@ body {
   @include navigation-button($team-color);
 }
 
-.project-button {
-  @include navigation-button($project-color);
-}
 
 .publications-button {
-  @include navigation-button($publication-color);
+  @include navigation-button($home-color);
   width: 120px;
 }
 
-.download-button {
-  @include navigation-button($download-color);
+.blog-button {
+  @include navigation-button($team-color);
+}
+
+
+.culture-button {
+  @include navigation-button($home-color);
 }
 
 .positions-button {
-  @include navigation-button($help-color);
+  @include navigation-button($team-color);
 }
 
-.culture-button {
-  @include navigation-button($help-color);
+
+
+.project-button {
+  @include navigation-button($home-color);
 }
 
 .award {
