--- a/_includes/publication_list_entry.html
+++ b/_includes/publication_list_entry.html
@@ -7,9 +7,15 @@
         {% assign known = false %}
         {% for person in site.persons %}
         {% if author == person.key %}
+
         <span class="paper-author">
+          {% if person.website %}
           <a href="{{ person.website }}">{{ person.first_name }}&nbsp;{{ person.last_name }}</a>{% if author != publication.authors.last %}, {% endif %}
+          {% else %}
+          {{ person.first_name }}&nbsp;{{ person.last_name }}{% if author != publication.authors.last %}, {% endif %}
+          {% endif %}
         </span>
+
         {% assign known = true %}
         {% endif %}
         {% endfor %}
