--- a/css/site.scss
+++ b/css/site.scss
@@ -965,6 +965,11 @@ a.project-website {
   font-family: $sans-serif-font-family;
   font-size: $page-content-font-size * 0.8;
   font-weight: 300;
+  margin-bottom: 10px;
+}
+
+.talk p {
+  margin-bottom: 0;
 }
 
 
