--- a/_includes/talk_entry.html
+++ b/_includes/talk_entry.html
@@ -1,6 +1,6 @@
 <div class="talk">
     <p >
-        <b>{{talk.title}}</b>
+        <b>{{talk.title }}</b>
              <span style="float:right">
         {% if talk.slides-key %}
         <a href="{{talk.slides-key}}">Keynote</a> |
@@ -14,11 +14,12 @@
         </span> <br>
         {% if talk.note %}
         {{ talk.note }}
-        <br>
         {% endif %}
+        <div class="talk-entry">
         {% for instance in talk.held %}
-        {{ instance }} <br>
+        {{ instance  | markdownify}} 
         {% endfor %}
+        </div>
     </p>
 
 </div>
