--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -17,7 +17,7 @@ layout: default
 
         {% if page.publications %}
 
-            {% assign pubs = page.publications | sort %}
+            {% assign pubs = page.publications %}
             <h2>Publications</h2>
 
             {% for publication_key in pubs reversed  %}
