added subtitle download

--- a/_includes/video_entry.html
+++ b/_includes/video_entry.html
@@ -17,6 +17,10 @@ Usage: {% include video_entry.html video=video_object %}
       {% endif %}
 
       {% if include.video.file %}
-      <p><i class="fa fa-download"></i> &nbsp;<a href="{{site.paper_content_url}}{{include.video.file}}">Download Video</a></p>
+      <p><i class="fa fa-download"></i> &nbsp;<a href="{{site.paper_content_url}}{{include.video.file}}">Download Video</a>
+      {% if include.video.subtitles %}
+      &nbsp;  <i class="fa fa-download"></i> &nbsp;<a href="{{site.paper_content_url}}{{include.video.subtitles}}">Download Subtitles</a>
+      {% endif %}
+      </p>
       {% endif %}
 </div>
