updated some links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,19 +15,19 @@
 
       {% if pageURLSplit[1] == navURL %}
       <li class="{{ nav }}-button">
-        <a class="active" href="{{ site.baseurl }}/{{ navURL }}">
+        <a class="active" href="{{ site.baseurl }}/{{ navURL }}/">
           <span class="nav-text">{{ nav | upcase }}</span></a>
       </li>
 
       {% elsif navURL == "" and pageURL == "/" %}
       <li class="{{ nav }}-button">
-        <a class="active" href="{{ site.baseurl }}/{{ navURL }}">
+        <a class="active" href="{{ site.baseurl }}/{{ navURL }}/">
           <span class="nav-text">{{ nav | upcase }}</span></a>
       </li>
 
       {% else %}
       <li class="{{ nav }}-button">
-        <a href="{{ site.baseurl }}/{{ navURL }}">
+        <a href="{{ site.baseurl }}/{{ navURL }}/">
           <span class="nav-text">{{ nav | upcase }}</span></a>
       </li>
       {% endif %}
