--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -81,7 +81,7 @@
             <p>
                 Copyright &copy; 2016-{{ site.time | date: '%Y' }} The Visualization Design Lab. All content on this website is licensed under
                 the
-                <a href="http://creativecommons.org/licenses/by/4.0/legalcode">Creative Commons Attribution license
+                <a href="https://creativecommons.org/licenses/by/4.0/legalcode">Creative Commons Attribution license
                     (CC BY)</a>. <br/> Copyright or exclusive license of the linked publications is frequently with the publishers. Logo by <a
                     href="http://www.antarctic-design.co.uk">Antarctic Design</a>. Last updated on {{ site.time | date: '%B %d, %Y' }}
             </p>
