--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -3,12 +3,10 @@
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
     ga('create', {{ site.google_analytics }}, 'auto');
     ga('send', 'pageview');
-
-
 
     (function (){
         var links = document.getElementsByTagName('a');
@@ -17,22 +15,16 @@
 
         for(var i = 0; i < links.length; ++i) {
             myLink = links[i];
-
             startWith = myLink.getAttribute('href').slice(0, 1);
 
             if (startWith!="/" && startWith!="#"){
                 addListener(myLink,'mousedown',function(){
-
                     console.log("a:", this.getAttribute('href'))
                     ga('send', 'event', 'link', 'click', this.getAttribute('href'));
-
                 })
             }
-
         }
     })();
-
-
 
     /**
      * Utility to wrap the different behaviors between W3C-compliant browsers
@@ -47,9 +39,5 @@
         if (element.addEventListener) element.addEventListener(type, callback);
         else if (element.attachEvent) element.attachEvent('on' + type, callback);
     }
-
-
-
-
 </script>
 <!-- End Google Analytics -->
