--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,7 +40,7 @@
 
 
       <p>We are a team of visualization researchers at the University of Utah. Our interests include the process of designing and developing visualizations, visualization for biology, visualization frameworks,  and, more generally, visualization of big, heterogeneous, and complex datasets. </p>
-      <p>VDL is part of the <a href="http://www.sci.utah.edu/">Scientific Computing and Imaging Institute</a> and the <a href="http://www.cs.utah.edu/">School of Computing</a>. </p>
+      <p>VDL is part of the <a href="https://www.sci.utah.edu/">Scientific Computing and Imaging Institute</a> and the <a href="https://www.cs.utah.edu/">School of Computing</a>. </p>
 
 
  <h1>Blog And News <span class="left-icon"><a href="{{ site.baseurl }}/feed.xml"><i class="fa fa-rss"></i></a></span></h1>
@@ -61,7 +61,7 @@
       </div>
     {% endfor %}
 
-  <div class="all-news-link"><a href="news">See All News</a></div>
+  <div class="all-news-link"><a href="news/">See All News</a></div>
   
 
   </article>
