and more link fixes

--- a/_includes/head_default.html
+++ b/_includes/head_default.html
@@ -5,7 +5,7 @@
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
 
 <!-- Custom CSS -->
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" href="{{ site.baseurl }}/css/site.css">
 
 <link rel="stylesheet" href="{{base.url}}/css/vdl_logo_styles.css">
