fixes for truncated text on front and news page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,7 +55,7 @@
           </a>          
       </div>
       <div class="post-list-excerpt">
-		  {{ post.content | truncatewords: 160 }}
+		  {{ post.abstract }}
       </div>
   		<div><a class="post-list-link" href="{{ site.baseurl }}{{ post.url }}">More...</a></div>         
       </div>
