--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,9 +1,8 @@
 <div class="banner">
-    <div class="home-image">
-        
+    <div class="home-image">        
         <div id="main-banner-image">
             <a class="banner-image" href="">
-                <img alt="" class="left-banner-image"/>
+                <img alt="Publication teaser image." class="left-banner-image"/>
                 <span id="left-banner-image-title" class="banner-image-title"></span>
             </a>
         </div>
@@ -11,13 +10,13 @@
         <div id="top-right-banner-image">
             <a class="banner-image" href="">
                 <span id="top-right-banner-image-title" class="banner-image-title"></span>
-                <img alt="" class="top-right-banner-image">
+                <img alt="Publication teaser image." class="top-right-banner-image">
             </a>
         </div>
 
         <div id="bottom-right-banner-image">
             <a class="banner-image" href="">
-                <img alt="" class="bottom-right-banner-image">
+                <img alt="Publication teaser image." class="bottom-right-banner-image">
                 <span id="bottom-right-banner-image-title" class="banner-image-title"></span>
             </a>
         </div>
@@ -33,7 +32,7 @@
                 var pub = publications[i];
                 i++;
                 var bannerImg = document.querySelector(id + " img");
-                bannerImg.alt = pub.shortname;
+                bannerImg.alt = pub.shortname + " teaser image";
                 bannerImg.src = "{{ site.baseurl }}/assets/images/publications/" + pub.image_large;
 
                 var bannerLink = document.querySelector(id + "  a");
