updates to my page

--- a/_layouts/person.html
+++ b/_layouts/person.html
@@ -145,8 +145,7 @@ layout: default
         {% endif %}
         {% if page.office-hours %}
         <br>
-        Office Hours: {{page.office-hours}} <br>
-        (during fall/spring term only)
+        Office Hours: {{page.office-hours}} 
         {% endif %}
     </p>
 </div>
