--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -55,6 +55,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
   text-rendering: optimizeLegibility; // Fix the character spacing for headings
+  clear: left;
 }
 
 h1, h2, h3, h4, h5, h5 {
