--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,8 @@
           <span class="nav-text">{{ nav | upcase }}</span></a>
       </li>
 
-      {% elsif navURL == "" and pageURL == "/" %}
+     
+      {% elsif navURL == ""%}
       <li class="{{ nav }}-button">
         <a class="active" href="{{ site.baseurl }}/">
           <span class="nav-text">{{ nav | upcase }}</span></a>
