adding news item about Jimmmy's defense

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -51,31 +51,31 @@
         <div class="post-list-item">
           <div class="post-list-title">
             <a class="post-list-link" href="{{ site.baseurl }}{{ post.url }}">
-              <span
-                >{% if post.type == "blog" %}Blog Post:{% else %}News:{% endif
-                %} {{ post.title }}</span
-              >
-              <span class="right-text"
-                >{{ post.date | date: "%-d %b %Y" }}</span
-              >
+              <span>{% if post.type == "blog" %}Blog Post:{% else %}News:{% endif %} {{ post.title }}</span>
+              <span class="right-text">{{ post.date | date: "%-d %b %Y" }}</span>
             </a>
           </div>
           <div class="post-list-excerpt">
-            {{ post.abstract }} {% if post.lead-image %}
-            <br />
-            <br />
-            <a href="{{ site.baseurl }}{{ post.url }}">
-              <img
-                src="{{site.baseurl}}{{post.lead-image}}"
-                alt="Blog lead image"
-              />
-            </a>
+            {{ post.abstract }} 
+            {% if post.lead-image %}
+              {% assign alt-text = "Blog lead image" %}
+              {% if post.lead-image-alt-text %} 
+                {% assign alt-text=post.lead-image-alt-text %}  
+              {% endif %}
+              <br><br>
+              <a href="{{ site.baseurl }}{{ post.url }}">
+              <img src="{{site.baseurl}}{{post.lead-image}}"  alt="{{alt-text}}"/>
+              </a>
+            {% endif %}
+
+            {% if post.type == "news" %}
+              <p>
+                {{ post.content }}
+              </p>
             {% endif %}
           </div>
           <div>
-            <a class="post-list-link" href="{{ site.baseurl }}{{ post.url }}"
-              >More...</a
-            >
+            <a class="post-list-link" href="{{ site.baseurl }}{{ post.url }}">More...</a>
           </div>
         </div>
         {% endfor %}
