setting Mirah and Sunny to alumni status

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -107,7 +107,7 @@ layout: default
       {% endfor %}
       </p> <br><br>
 
-      <h1>Former PostDocs</h1>
+      <h1>Former Faculty and PostDocs</h1>
       <p class="person-list-block">
       {% for p in site.persons %}
       {% if p.postdoc_alumni %}
