fixing mobile issues with funding agency logos

--- a/css/site.scss
+++ b/css/site.scss
@@ -901,13 +901,15 @@ a.project-website {
     @include box-shadow(1px, 1px, 4px, transparentize(black, 0.75));
     @include border-radius(3px);
 
-    @include media($medium-display) {
-      @include span-columns(3.5);
-    }
+    // @include media($medium-display) {
+    //   @include span-columns(1.5);
+    // }
 
     @include media($small-display) {
-      margin: 10px 0;
-      width: 80%;
+      display: none;
+      //   @include span-columns(1.5);
+    //   margin: 10px 0;
+    //   //width: 80%;
     }
   }
 
