--- a/_includes/project_list_entry.html
+++ b/_includes/project_list_entry.html
@@ -6,7 +6,8 @@
     <p class="pubs">
 
         <span class="paper-title"><a href="{{ site.baseurl }}{{ project.url }}">{{ project.title }}</a></span><br/>
-        <span><b>PI:</b> {% include person_name_link.html key=project.pi %}</span>
+        <span><b>PI:</b> {% include person_name_link.html key=project.pi %}</span><br/>
+        <span><b>Sponsor:</b> {{project.agency}}</span>
 
         {% if project.copi %}
          <br>
@@ -16,13 +17,7 @@
            {% endfor %}
         {% endif %}
 
-        {% if project.coinvestigators %}
-            <br>
-            <span><b>Co-Investigators:</b> </span>
-            {% for investigator in project.coinvestigators %}
-                {% include person_name_link.html key=investigator %}{% if forloop.last %}{% else %},{% endif %}
-           {% endfor %}
-        {% endif %}
+    
         <br>
         <span><b>Duration:</b> {{project.time}}</span>
        </p>
