Remove a tags in citations from authors without websites

--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -22,7 +22,13 @@ layout: default
         {% for author in page.authors %}
           {% assign known = false %}
             {% for person in site.persons %}
-              {% if author == person.key %}<a href="{{ person.website }}">{{ person.first_name }}&nbsp;{{ person.last_name }}</a>{% if author != page.authors.last%}, {% endif %}
+              {% if author == person.key %}
+                {% if person.website %}
+                <a href="{{ person.website }}">{{ person.first_name }}&nbsp;{{ person.last_name }}</a>
+                {% else %}
+                {{ person.first_name }}&nbsp;{{ person.last_name }}
+                {% endif %}
+              {% if author != page.authors.last%}, {% endif %}
               {% if author == page.authors.first %} {% assign bibauthors = person.first_name | append: ' ' | append: person.last_name %}
               {% else %}
               {% assign bibauthors = bibauthors | append: ' and ' | append: person.first_name | append: ' ' | append: person.last_name %}
